# triton-augment

./: .gitignore  404.html  CHANGELOG.md  COLAB_TESTING.md  CONTRIBUTING.md  FIXES.md  GRAYSCALE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  RELEASING.md  analyze_90deg.py  compare_kernel_vs_pytorch.py  compare_pytorch.py  dali_bench.py  debug_affine.py  debug_affine_grid.py  debug_detailed.py  debug_pixel.py  debug_seed.py  debug_test.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test_grid_sample_rounding.py  test_refactor_fix.py  test_triton_augment.ipynb  verify_installation.py  verify_matrix_local.py
.github/: DOCUMENTATION_STRUCTURE.md
DOCUMENTATION/: index.html
api-reference/: index.html
auto-tuning/: index.html
batch-behavior/: index.html
comparison-other-libs/: index.html
contrast/: index.html
docs/: DOCUMENTATION.md  README.md  api-reference.md  auto-tuning.md  batch-behavior.md  comparison-other-libs.md  contrast.md  float16.md  index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: README.md  basic_usage.py  benchmark.py  benchmark_triton.py  benchmark_video.py  train_cifar10.py  train_mnist.py  visualize_augmentations.py  warmup_example.py
float16/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_affine.py  test_correctness.py  test_float16.py  test_fused_affine.py  test_fused_all.py  test_fused_color.py  test_fused_geometric.py  test_individual_color.py  test_individual_geometric.py  test_per_image_randomness.py  test_refactor_fix.py  test_transforms.py  test_video_5d.py
triton_augment/: __init__.py  __main__.py  config.py  functional.py  transforms.py  utils.py
triton_augment/kernels/: __init__.py  color_normalize_kernel.py  fused_kernel.py  geometric_kernel.py
